✨ feat: added carrossel

--- a/index.html
+++ b/index.html
@@ -77,5 +77,15 @@
       </div>
     </span>
   </section>
+
+  <section id="six">
+    <div>
+      <span onclick="handleMoveCarrossel('right')"></span>
+      <div >
+        <img id="image-carrossel" src="assets/1.webp">
+      </div>
+      <span onclick="handleMoveCarrossel('left')"></span>
+    </div>                    
+  </section>
 </body>
 </html>
