✨ feat: added component seven

--- a/index.html
+++ b/index.html
@@ -87,5 +87,17 @@
       <span onclick="handleMoveCarrossel('left')"></span>
     </div>                    
   </section>
+
+  <section id="seven">
+    <div>
+      <img src="assets/violao.webp" alt="">
+    </div>
+    <div>
+      <img src="assets/violao.webp" alt="">
+    </div>
+    <div>
+      <img src="assets/violao.webp" alt="">
+    </div>
+  </section>
 </body>
 </html>
