🐛 fix: mobile section one

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <section id="one">
     <div>
-      <span onclick="handleScrollImages('up')"></span>
+      <span id="up" onclick="handleScrollImages('up')"></span>
+      <span id="right" onclick="handleScrollImages('right')"></span>
       <div >
         <img class="scroll" onclick="handleChangeImage(this.src)" src="assets/1.jpeg">
         <img class="scroll" onclick="handleChangeImage(this.src)" src="assets/2.jpeg">
@@ -19,7 +20,8 @@
         <img class="scroll" onclick="handleChangeImage(this.src)" src="assets/4.jpeg">
         <img class="scroll" onclick="handleChangeImage(this.src)" src="assets/5.jpeg">
       </div>
-      <span onclick="handleScrollImages('down')"></span>
+      <span id="down" onclick="handleScrollImages('down')"></span>
+      <span id="left" onclick="handleScrollImages('left')"></span>
     </div>
     
     <div>
